--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -1,15 +1,69 @@
-cmake_minimum_required(VERSION 3.4.1)
 
-set (CMAKE_VERBOSE_MAKEFILE ON)
-set (CMAKE_CXX_STANDARD 11)
+   
+cmake_minimum_required(VERSION 3.9.0)
 
-add_library(cpp
-            SHARED
-            ../cpp/react-native-clusterer.cpp
-            cpp-adapter.cpp
+set (PACKAGE_NAME "cpp")
+set (BUILD_DIR ../build)
+
+
+include_directories(
+        ${PACKAGE_NAME}
+        "${NODE_MODULES_DIR}/react-native/React"
+        "${NODE_MODULES_DIR}/react-native/React/Base"
+        "${NODE_MODULES_DIR}/react-native/ReactCommon/jsi"
+        "./"
 )
 
-# Specifies a path to native header files.
-include_directories(
-            ../cpp
+file (GLOB LIBRN_DIR "${BUILD_DIR}/react-native-0*/jni/${ANDROID_ABI}")
+
+if (JSI_LIB)
+  # React Native 0.66.x and above
+  add_library(
+          ${PACKAGE_NAME}
+          SHARED
+          ./cpp-adapter.cpp
+  )
+
+  find_library(
+        JSI_LIB
+        jsi
+        PATHS ${LIBRN_DIR}
+        NO_CMAKE_FIND_ROOT_PATH
+  )
+else()
+  # React Native 0.65.x and below
+  add_library(
+          ${PACKAGE_NAME}
+          SHARED
+          ../../../react-native/ReactCommon/jsi/jsi/jsi.cpp
+          ./cpp-adapter.cpp
+  )
+endif()
+
+find_library(
+        LOG_LIB
+        log
+)
+
+find_library(
+        REACT_NATIVE_JNI_LIB
+        reactnativejni
+        PATHS ${LIBRN_DIR}
+        NO_CMAKE_FIND_ROOT_PATH
+)
+
+set_target_properties(
+        ${PACKAGE_NAME} PROPERTIES
+        CXX_STANDARD 17
+        CXX_EXTENSIONS OFF
+        POSITION_INDEPENDENT_CODE ON
+)
+
+target_link_libraries(
+        ${PACKAGE_NAME}
+        ${LOG_LIB}
+        ${REACT_NATIVE_JNI_LIB}
+        ${JSI_LIB}
+        core
+        android
 )
