--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.66.3"
+    "react-native": "0.66.3",
+    "react-native-clusterer": "../"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
