Fix previous build commits, changes originally saved inside node_modules

--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -1,17 +1,15 @@
-
-   
 cmake_minimum_required(VERSION 3.9.0)
 
 set (PACKAGE_NAME "cpp")
-set (BUILD_DIR ../build)
-
+set (BUILD_DIR ./build)
 
 include_directories(
         ${PACKAGE_NAME}
         "${NODE_MODULES_DIR}/react-native/React"
         "${NODE_MODULES_DIR}/react-native/React/Base"
         "${NODE_MODULES_DIR}/react-native/ReactCommon/jsi"
-        "./"
+        "../cpp"
+        "."
 )
 
 file (GLOB LIBRN_DIR "${BUILD_DIR}/react-native-0*/jni/${ANDROID_ABI}")
@@ -21,21 +19,23 @@ if (JSI_LIB)
   add_library(
           ${PACKAGE_NAME}
           SHARED
+          ../cpp/react-native-clusterer.cpp
           ./cpp-adapter.cpp
   )
 
   find_library(
-        JSI_LIB
-        jsi
-        PATHS ${LIBRN_DIR}
-        NO_CMAKE_FIND_ROOT_PATH
+          JSI_LIB
+          jsi
+          PATHS ${LIBRN_DIR}
+          NO_CMAKE_FIND_ROOT_PATH
   )
 else()
   # React Native 0.65.x and below
   add_library(
           ${PACKAGE_NAME}
           SHARED
-          ../../../react-native/ReactCommon/jsi/jsi/jsi.cpp
+          ../../react-native/ReactCommon/jsi/jsi/jsi.cpp
+          ../cpp/react-native-clusterer.cpp
           ./cpp-adapter.cpp
   )
 endif()
@@ -45,12 +45,12 @@ find_library(
         log
 )
 
-find_library(
-        REACT_NATIVE_JNI_LIB
-        reactnativejni
-        PATHS ${LIBRN_DIR}
-        NO_CMAKE_FIND_ROOT_PATH
-)
+#find_library(
+#        REACT_NATIVE_JNI_LIB
+#        reactnativejni
+#        PATHS ${LIBRN_DIR}
+#        NO_CMAKE_FIND_ROOT_PATH
+#)
 
 set_target_properties(
         ${PACKAGE_NAME} PROPERTIES
@@ -62,8 +62,7 @@ set_target_properties(
 target_link_libraries(
         ${PACKAGE_NAME}
         ${LOG_LIB}
-        ${REACT_NATIVE_JNI_LIB}
+#        ${REACT_NATIVE_JNI_LIB}
         ${JSI_LIB}
-        core
         android
 )
