--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-clusterer": "file:..",
+    "react-native-maps": "^0.29.4",
     "supercluster": "^7.1.2"
   },
   "devDependencies": {
