--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -77,7 +77,7 @@ import com.android.build.OutputFile
 
 project.ext.react = [
     enableHermes: true,  // clean and rebuild if changing
-    entryFile: "index.js",
+    entryFile: "index.ts",
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -90,7 +90,7 @@ apply from: "../../node_modules/react-native/react.gradle"
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = true
+def enableSeparateBuildPerCPUArchitecture = false
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
@@ -213,6 +213,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(':reactnativeclusterer')
 }
 
 // Run this once to be able to run the application with BUCK
