--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -12,14 +12,16 @@ target 'ClustererExample' do
     :hermes_enabled => true
   )
 
-  # Enables Flipper.
+  pod 'react-native-clusterer', :path => '../..'
+
+    # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
   use_flipper!()
 
   post_install do |installer|
-    react_native_post_install(installer)
+    flipper_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
