--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@react-native-community/eslint-config": "^3.0.1",
     "@release-it/conventional-changelog": "^3.3.0",
     "@types/jest": "^27.0.2",
+    "@types/mapbox__geo-viewport": "^0.4.1",
     "@types/react": "^17.0.34",
     "@types/react-native": "0.66.4",
     "commitlint": "^14.1.0",
@@ -151,6 +152,7 @@
     ]
   },
   "dependencies": {
+    "@mapbox/geo-viewport": "^0.5.0",
     "@types/geojson": "^7946.0.8"
   }
 }
