--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,16 @@
 import java.nio.file.Paths
 
 buildscript {
-  // Buildscript is evaluated before everything else so we can't use getExtOrDefault
+
   repositories {
     google()
     jcenter()
     mavenCentral()
-  }
 
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
+  }
   dependencies {
     classpath 'com.android.tools.build:gradle:4.2.2'
   }
@@ -15,22 +18,16 @@ buildscript {
 
 apply plugin: 'com.android.library'
 
-def getExtOrDefault(name) {
-  return rootProject.ext.has(name) ? rootProject.ext.get(name) : project.properties['RNClusterer_' + name]
+def getExtOrDefault(name, defaultValue) {
+  return rootProject.ext.has(name) ? rootProject.ext.get(name) : defaultValue
 }
 
-def getExtOrIntegerDefault(name) {
-  return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties['RNClusterer_' + name]).toInteger()
-}
-
-def basePath = projectDir.toPath().normalize()
-def nodeModulesDir = ''
-def reactNativeDir = ''
 def found = false
+def basePath = projectDir.toPath().normalize()
 
 // Find node_modules inside the example project
-nodeModulesDir = Paths.get(basePath.getParent().toString(), "example/node_modules")
-reactNativeDir = Paths.get(nodeModulesDir.toString(), "react-native/android")
+def nodeModulesDir = Paths.get(basePath.getParent().toString(), "example/node_modules")
+def reactNativeDir = Paths.get(nodeModulesDir.toString(), "react-native/android")
 if (nodeModulesDir.toFile().exists() && reactNativeDir.toFile().exists()) {
   found = true
 }
@@ -58,46 +55,37 @@ if(!found) {
 def nodeModulesPath = nodeModulesDir.toString().replace("\\", "/")
 def reactNativePath = reactNativeDir.toString().replace("\\", "/")
 
+
 android {
-  compileSdkVersion getExtOrIntegerDefault('compileSdkVersion')
-  buildToolsVersion getExtOrDefault('buildToolsVersion')
-  ndkVersion getExtOrDefault('ndkVersion')
+  compileSdkVersion getExtOrDefault('compileSdkVersion', 28)
 
   defaultConfig {
-    minSdkVersion 21
-    targetSdkVersion getExtOrIntegerDefault('targetSdkVersion')
-    versionCode 1
-    versionName "1.0"
+    minSdkVersion getExtOrDefault('minSdkVersion', 16)
+    targetSdkVersion getExtOrDefault('targetSdkVersion', 28)
 
     externalNativeBuild {
-        cmake {
-            cppFlags "-O3 -frtti -fexceptions -Wall -fstack-protector-all", "-DONANDROID"
-            abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
-            arguments "-DANDROID_STL=c++_shared", "-DNODE_MODULES_DIR=${nodeModulesPath}"
-        }
-    }
-
-  }
-
-  externalNativeBuild {
       cmake {
-          path "CMakeLists.txt"
+        cppFlags "-fexceptions", "-frtti", "-std=c++1y", "-DONANDROID"
+        abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+        arguments '-DANDROID_STL=c++_shared', "-DNODE_MODULES_DIR=${nodeModulesPath}"
       }
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
     }
   }
 
-
-  lintOptions {
-    disable 'GradleCompatible'
-  }
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
+  }
+
+  lintOptions{
+    abortOnError false
+    disable 'GradleCompatible'
+  }
+
+  externalNativeBuild {
+     cmake {
+          path "./CMakeLists.txt"
+      }
   }
 
   packagingOptions {
@@ -111,7 +99,7 @@ android {
 
 repositories {
   mavenCentral()
-  jcenter()
+  mavenLocal()
   google()
 
   maven {
@@ -128,8 +116,9 @@ dependencies {
   extractJNI(files(rnAAR))
 }
 
+def extracted = false;
 task extractJNIFiles {
-
+  if (extracted) return
   doLast {
     configurations.extractJNI.files.each {
       def file = it.absoluteFile
@@ -139,32 +128,12 @@ task extractJNIFiles {
         into "$buildDir/$file.name"
         include "jni/**/*"
       }
+      extracted = true;
     }
   }
 }
 
-task extractJNIFilesForRelease {
-
-  doLast {
-    configurations.extractJNI.files.each {
-      def file = it.absoluteFile
-
-      copy {
-        from zipTree(file)
-        into "$buildDir/$file.name"
-        include "jni/**/*"
-      }
-    }
-  }
-}
-
-
+// Extract JNI files as soon as first task is added
 tasks.whenTaskAdded { task ->
-  if (task.name.contains('generateJsonModelDebug') || task.name.contains('externalNativeBuild')) {
-    task.dependsOn(extractJNIFiles);
-  }
-  // workaround for builds failing in various ci
-  if (task.name.contains('generateJsonModelRelease')) {
-    task.dependsOn(extractJNIFilesForRelease)
-  }
+  task.dependsOn(extractJNIFiles);
 }
