--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "release": "release-it",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
-    "bootstrap": "yarn example && yarn && yarn pods"
+    "bootstrap": "yarn example && yarn && yarn pods",
+    "clang-format": "find cpp/ -iname *.h -o -iname *.cpp | xargs clang-format -i"
   },
   "keywords": [
     "react",
@@ -67,7 +68,8 @@
     "@types/jest": "^27.0.2",
     "@types/mapbox__geo-viewport": "^0.4.1",
     "@types/react": "^17.0.34",
-    "@types/react-native": "0.66.4",
+    "@types/react-native": "0.66.3",
+    "clang-format": "^1.6.0",
     "commitlint": "^14.1.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
@@ -76,8 +78,8 @@
     "jest": "^27.3.1",
     "pod-install": "^0.1.28",
     "prettier": "^2.4.1",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react": "17.0.2",
+    "react-native": "0.66.3",
     "react-native-builder-bob": "^0.18.2",
     "release-it": "^14.11.6",
     "typescript": "^4.4.4"
